# data4good-ml

./: .gitignore  MLP_model.ipynb  Models.py  PM10_model_v1.onnx  README.md  data_prep.ipynb  data_visualization.ipynb  find_nearest.ipynb  functions.py  gen_pollution_stations_coord.ipynb  merged.csv  model_eval.ipynb  pivot.csv  pivot_PM10.csv  pivot_traffic.csv  t.ipynb  traffic_to_pollution.ipynb
backend/: Dockerfile  api.py  main.py  prediction.py  pyproject.toml  sample_data.py
trained_models/: PM10_model.onnx  PM10_model.tar  PM10_model_v1.onnx  PM10_model_v1.tar  PM10_model_v2.onnx
